tests/expectations/parser/program/stub_fail.out
namespace = "Parse"
expectation = "Fail"
outputs = ["""
Error [EPAR0370005]: expected 'import', 'program' -- found 'stub'
    --> test:3:1
     |
   3 | stub credits.aleo {
     | ^^^^"""]
